fix: add button text for clarity and enhance button styles for better visibility

--- a/Projetos Alura/Lista de Compras/style.css
+++ b/Projetos Alura/Lista de Compras/style.css
@@ -35,4 +35,6 @@ body{
     width: 8.75rem;
     height: 3rem;
     border-radius: 24px;
+    background-color: #F55B64;
+    color: #FFFFFF;
 }
